--- a/src/Dotland.FileSyncHub.Web/Dotland.FileSyncHub.Web.csproj
+++ b/src/Dotland.FileSyncHub.Web/Dotland.FileSyncHub.Web.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <RootNamespace>Dotland.FileSyncHub.Web</RootNamespace>
+    <AssemblyName>Dotland.FileSyncHub.Web</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
