--- a/src/Dotland.FileSyncHub.Web/appsettings.json
+++ b/src/Dotland.FileSyncHub.Web/appsettings.json
@@ -6,6 +6,10 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=filesync.db"
+  },
+  "UseInMemoryDatabase": false,
   "S3": {
     "Region": "eu-west-1",
     "BucketName": "",
