--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -11,6 +11,20 @@
     <!-- ASP.NET Core -->
     <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
 
+    <!-- MediatR for CQRS -->
+    <PackageVersion Include="MediatR" Version="12.4.1" />
+
+    <!-- Entity Framework Core -->
+    <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.0" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0" />
+
+    <!-- Elsa Workflows (for future use) -->
+    <PackageVersion Include="Elsa" Version="3.3.0" />
+    <PackageVersion Include="Elsa.EntityFrameworkCore" Version="3.3.0" />
+    <PackageVersion Include="Elsa.EntityFrameworkCore.Sqlite" Version="3.3.0" />
+
     <!-- Testing (for future use) -->
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageVersion Include="xunit" Version="2.9.2" />
