--- a/src/Dotland.FileSyncHub.Infrastructure/Dotland.FileSyncHub.Infrastructure.csproj
+++ b/src/Dotland.FileSyncHub.Infrastructure/Dotland.FileSyncHub.Infrastructure.csproj
@@ -4,4 +4,14 @@
     <LangVersion>default</LangVersion>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Dotland.FileSyncHub.Domain\Dotland.FileSyncHub.Domain.csproj" />
+  </ItemGroup>
 </Project>
