--- a/src/Dotland.FileSyncHub.Web/Dotland.FileSyncHub.Web.csproj
+++ b/src/Dotland.FileSyncHub.Web/Dotland.FileSyncHub.Web.csproj
@@ -12,6 +12,14 @@
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" />
     <PackageReference Include="AWSSDK.S3" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Dotland.FileSyncHub.Application\Dotland.FileSyncHub.Application.csproj" />
+    <ProjectReference Include="..\Dotland.FileSyncHub.Infrastructure\Dotland.FileSyncHub.Infrastructure.csproj" />
+  </ItemGroup>
 </Project>
