--- a/src/Dotland.FileSyncHub.Web/appsettings.Development.json
+++ b/src/Dotland.FileSyncHub.Web/appsettings.Development.json
@@ -1,14 +1,18 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "Microsoft.AspNetCore": "Information"
-    }
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Information"
+    },
+    "EnableSensitiveDataLogging": true
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=filesyncdb;Username=filesync;Password=filesync_password"
+  },
+  "UseInMemoryDatabase": false,
   "S3": {
-    "Region": "eu-west-1",
-    "BucketName": "ged-documents-dev",
     "ServiceUrl": "http://localhost:4566",
-    "MaxFileSizeMb": 100
+    "BucketName": "filesync-dev"
   }
 }
