--- a/src/Dotland.FileSyncHub.Web/appsettings.Development.json
+++ b/src/Dotland.FileSyncHub.Web/appsettings.Development.json
@@ -8,7 +8,7 @@
     "EnableSensitiveDataLogging": true
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=filesyncdb;Username=filesync;Password=filesync_password"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=filesyncdb;Username=postgres;Password=mysecretpassword"
   },
   "UseInMemoryDatabase": false,
   "S3": {
