--- a/src/Dotland.FileSyncHub.Web/appsettings.json
+++ b/src/Dotland.FileSyncHub.Web/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=filesync.db"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=filesyncdb;Username=postgres;Password=mysecretpassword"
   },
   "UseInMemoryDatabase": false,
   "S3": {
