--- a/src/Dotland.FileSyncHub.Application/Dotland.FileSyncHub.Application.csproj
+++ b/src/Dotland.FileSyncHub.Application/Dotland.FileSyncHub.Application.csproj
@@ -22,6 +22,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="Microsoft.EntityFrameworkCore">
+      <HintPath>..\..\..\..\..\home\hamza\.nuget\packages\microsoft.entityframeworkcore\9.0.0\lib\net8.0\Microsoft.EntityFrameworkCore.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Extensions.Configuration.Abstractions">
       <HintPath>..\..\..\..\..\home\hamza\.dotnet\packs\Microsoft.AspNetCore.App.Ref\9.0.10\ref\net9.0\Microsoft.Extensions.Configuration.Abstractions.dll</HintPath>
     </Reference>
