--- a/src/Dotland.FileSyncHub.Infrastructure/Dotland.FileSyncHub.Infrastructure.csproj
+++ b/src/Dotland.FileSyncHub.Infrastructure/Dotland.FileSyncHub.Infrastructure.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="AWSSDK.S3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
   </ItemGroup>
 
