--- a/.github/workflows/cd-deploy.yml
+++ b/.github/workflows/cd-deploy.yml
@@ -7,6 +7,7 @@ on:
 
 env:
   DOCKER_USERNAME: hsaii
+  WEB_IMAGE: hsaii/dms-api
   TARGET_TAG: latest
 
 jobs:
@@ -17,7 +18,7 @@ jobs:
       - name: Delete existing images if they exist
         env:
           DOCKER_PAT: ${{ secrets.DOCKER_PAT }}
-          USERNAME: ${{ env.DOCKER_USERNAME }}
+          USERNAME: ${{ secrets.DOCKER_USERNAME }}
         run: |
           # Function to delete tag
           delete_tag() {
@@ -45,8 +46,8 @@ jobs:
              exit 1
           fi
 
-          # Clean for FileSyncHub Web API
-          delete_tag "filesync-web" "$TARGET_TAG"
+          # Clean for DMS API
+          delete_tag "dms-api" "$TARGET_TAG"
 
   deploy-app:
     needs: cleanup-registry
@@ -78,7 +79,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ env.DOCKER_USERNAME }}
+          username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PAT }}
 
       - name: Build and Push Web API with Version
@@ -88,8 +89,8 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            ${{ env.DOCKER_USERNAME }}/filesync-web:latest
-            ${{ env.DOCKER_USERNAME }}/filesync-web:${{ env.VERSION }}
+            ${{ env.WEB_IMAGE }}:latest
+            ${{ env.WEB_IMAGE }}:${{ env.VERSION }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: |
